# aanet

./: .gitattributes  .gitignore  CalibParams_Stereo.yml  LICENSE  MODEL_ZOO.md  README.md  convert_format.py  convert_format.sh  inference.py  metric.py  model.py  open3d_viewpoint.json  predict.py  run_webcam.sh  run_webcam_stereonet.sh  train.py  visualise.py  webcam_inference.py  webcamgrabber.py
dataloader/: __init__.py  dataloader.py
deploy/: CMakeLists.txt  convert_format.py  main.cpp
filenames/: KITTI_2012_train.txt  KITTI_2012_val.txt  KITTI_2015_train.txt  KITTI_2015_train_all.txt  KITTI_2015_val.txt  KITTI_mix.txt  SceneFlow_finalpass_test.txt  SceneFlow_finalpass_val.txt  generate_filenames.py
nets/: __init__.py  aanet.py  aggregation.py  cost.py  deform.py  feature.py  refinement.py  warp.py
nets/deform_conv/: README.md  __init__.py  deform_conv.py  setup.py  test.py
nets/deform_conv/csrc/: cuda_version.cu  vision.cpp
nets/deform_conv/dcn_cpp_plugin/: CMakeLists.txt  README.md  dcn_v2.h  dcn_v2_cuda.cu  dcn_v2_im2col_cuda.cu  dcn_v2_im2col_cuda.h  vision.cpp  vision.h
nets/deform_conv/src/: dcn_v2.h  deform_conv_cuda.cpp
nets/deform_conv/src/cpu/: dcn_v2_cpu.cpp  (+1 more)
scripts/: aanet+_evaluate.sh  aanet+_inference.sh  aanet+_predict.sh  aanet+_timing.sh  aanet+_train.sh  aanet_evaluate.sh  aanet_inference.sh  aanet_predict.sh  aanet_timing.sh  aanet_train.sh  ganet-aa_inference.sh  gcnet-aa_inference.sh  psmnet-aa_inference.sh  stereonet-aa_inference.sh
thop/: count_hooks.py  profile.py
utils/: file_io.py  utils.py  visualization.py
(+2 files in other folders)
